--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
          <div class="exploreContent">
             <h2>Repair Services</h2>
             <p>Up to <span>70% Off</span> -All t-shirt & Accessories</p>
+            <div class="btn-class">
             <button class="btn"><p>Explore More</p></button>
+            </div>
          </div>
          
       </section>
@@ -155,7 +157,6 @@
          <p>Summer Collection New Modern Design</p>
          </div>
          <div class="collectionSec">
-
             <div class="CartoonS1">
               <img src="img/products/n1.jpg" alt="n1">
              <div class="description1">
@@ -242,6 +243,36 @@
               <p>$78</p>
             </div> 
               <i class="fa-sharp fa-thin fa-cart-shopping"></i>
+         </div>
+      </section>
+      <section class="style">
+           <div class="buy-free">
+            <h2>crazy deals</h2>
+            <h1>buy 1 get 1 free</h1>
+            <p>The best classic dress is on sale at care </p>
+            <div class="btn-class">
+               <button class="btn"><p>Learn More</p></button>
+            </div>
+           </div>
+            <div class="upcoming">
+            <h2>spring/summer</h2>
+            <h1>Upcomming season</h1>
+            <p>The best classic dress is on sale at care </p>
+            <div class="btn-class">
+               <button class="btn"><p>Collection</p></button>
+            </div>
+           </div>
+         <div class="seasonal">
+            <h1>SEASONAL SALE</h1>
+            <p>Winter collection -50% off </p>
+         </div>
+          <div class="footwear">
+            <h1>NEW FOOTWEAR COLLECTION</h1>
+            <p>spring/summer 2022 </p>
+         </div>
+          <div class="seasonal">
+            <h1>T-SHIRTS</h1>
+            <p>New Trandy Price </p>
          </div>
       </section>
        <script src="script.js"></script>
