--- a/index.html
+++ b/index.html
@@ -267,6 +267,7 @@
                <button class="btn-summer"><p>Collection</p></button>
             </div>
            </div>
+           <div class="divisionC">
          <div class="seasonal">
             <h1>SEASONAL SALE</h1>
             <p>Winter collection -50% off </p>
@@ -275,9 +276,10 @@
             <h1>NEW FOOTWEAR COLLECTION</h1>
             <p>spring/summer 2022 </p>
          </div>
-          <div class="seasonal">
+          <div class="seasona2">
             <h1>T-SHIRTS</h1>
             <p>New Trandy Price </p>
+         </div>
          </div>
       </section>
        <script src="script.js"></script>
