--- a/home.html
+++ b/home.html
@@ -302,7 +302,7 @@
           <img src="img/pay/pay.png" alt="">
         </div>
         <div class="copyright">
-          <p>2021, Tech2 etc - HTML CSS Ecommerce Template</p>
+          <p>&copy 2021, Tech2 etc - HTML CSS Ecommerce Template</p>
         </div>
            
       </footer>
